fix: record before storing, folds in the manifest, and a README that is true
Three of Fable's findings and the documentation that oversold all of them.

hold stored the value and then wrote the record. An auditor that throws left the
value committed durably under an id the caller never received: a secret nothing
could reach, read or erase. The record now goes first, for hold and for both
kinds of derive, so an access that cannot be audited leaves nothing behind. The
test asserted only that hold threw; it now asserts storage is empty afterwards,
which is the half that mattered.

Folds were missing from the manifest entirely, so a fold that lowers a label
weakened it invisibly while the report said those were "the only things that can
make them less". The suite passed because it registered no lowering fold. There
is one now.

The manifest also reordered itself every run: registries were built as
LinkedHashMaps and then copied through Map.copyOf, which salts its order. A
document meant to be diffed between reviews cannot do that.

And the README described a different library: durable storage "not written yet"
six commits after it was, an onBehalfOf helper that never existed, "depends on
nothing" when loch-core depends on the codec contract, and a decompression bound
claimed as Loch's when it belongs to whichever compressor you supply. It also
now says plainly that LatticeTck cannot be extended from outside this repo yet.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0132JwmrF1uP1JAHcWwmPHrY